# lockjaw

./: .gitignore  404.html  Cargo.toml  README.md  before.html  binds.html  builder.html  caveats.html  changes.html  chapter_1.html  code-of-conduct.html  contributing.html  cross_macro_communication.html  define_component.html  empty_multibinding.html  factory.html  glossary.html  index.html  inject.html  install.html  intro.html  late_impl_generation.html  lazy.html  map.html  multibindings.html  optional.html  path_resolution.html  print.html  provider.html  provides.html  qualifiers.html  request.html  scoped.html  searchindex.js  searchindex.json  setup.html  subcomponent.html  toc.html  toc.js  vec.html  (+1 more)
.github/workflows/: gh-pages.yml  rust.yml
common/: Cargo.toml
common/src/: attributes.rs  build_log.rs  environment.rs  lib.rs  manifest.rs  manifest_parser.rs  parsing.rs  type_data.rs
common/src/attributes/: cfg.rs  component_visibles.rs  components.rs  entrypoints.rs  injectables.rs  modules.rs  qualifier.rs
compile_tests/: Cargo.toml
compile_tests/duplicated_root_epilogue/: Cargo.toml
compile_tests/src/: lib.rs
compile_tests/tests/: builder_modules.rs  compile_test.rs  component.rs  graph.rs  injectable.rs  module.rs  prologue.rs  subcomponent.rs
docs/: caveats.md  component.md  index.md  scoped.md
example/: Cargo.toml  build.rs
example/printer/: Cargo.toml
example/printer/printer_impl/: Cargo.toml
example/printer/printer_impl/src/: lib.rs
example/src/: main.rs  mod_dir.rs
example_game/: .gitignore  Cargo.toml  README.md  build.rs
example_game/color_cycle/: Cargo.toml  build.rs
example_game/color_cycle/src/: main.rs
example_game/cubit-win64/: Cargo.toml
example_game/cubit-win64/src/: lib.rs  marshal.rs  os.rs
example_game/cubit-win64/src/application/: mod.rs  window.rs
example_game/cubit-win64/src/directx/: command_allocator.rs  command_list.rs  command_queue.rs  descriptor_heap.rs  dx_device.rs  fence.rs  mod.rs  swap_chain.rs
example_game/cubit-win64/src/graphics/: mod.rs  renderer.rs
example_game/src/: core.rs  graphics.rs  lib.rs  os.rs
integration_tests/: Cargo.toml  build.rs
integration_tests/tests/: component_inner_mod.rs  component_module_auto_new.rs  component_module_builder_build.rs  component_module_manifest_inner_mod.rs  component_other_file.rs  component_provision.rs  component_provision_autobox.rs  component_provision_indirectly_cl_scoped.rs  component_provision_indirectly_scoped.rs  component_provision_lifetimed_scoped.rs  component_provision_other_file.rs  component_provision_scoped.rs  define_component.rs  entry_point.rs  extern_component.rs  injectable_factory.rs  injectable_factory_implementing.rs  injectable_factory_lifetimed.rs  injectable_factory_visibility.rs  injectable_inject.rs  injectable_inject_autobox.rs  injectable_inject_component_lifetime.rs  injectable_inject_extern.rs  injectable_inject_qualified.rs  injectable_inject_scoped.rs  injectable_inner_mod_path.rs  injectable_inner_mod_path_outer_impl.rs  injectable_scoped.rs  injectable_scoped_container.rs  injectable_scoped_container_lifetimed.rs  lazy.rs  lazy_scoped.rs  module_bind_indirectly_maybe_scoped_trait.rs  module_bind_indirectly_scoped_trait.rs  module_bind_scoped_trait.rs  module_bind_scoped_trait_container.rs  module_bind_trait.rs  module_binds_option_of.rs  module_inject_param.rs  module_inject_param_autobox.rs  (+29 more)
integration_tests/tests/other_file/: mod.rs
integration_tests/tests/test_dep/: Cargo.toml  build.rs
integration_tests/tests/test_dep/src/: lib.rs
processor/: Cargo.toml  README.md  build.rs
processor/protos/: manifest.proto
processor/src/: component_visibles.rs  components.rs  entrypoints.rs  environment.rs  error.rs  graph.rs  injectables.rs  lib.rs  log.rs  manifest.rs  manifests.rs  modules.rs  parsing.rs  prologue.rs  qualifier.rs  type_data.rs  type_validator.rs
processor/src/nodes/: binds.rs  binds_option_of.rs  boxed.rs  component_lifetime.rs  entry_point.rs  injectable.rs  lazy.rs  map.rs  maybe_scoped.rs  mod.rs  node.rs  parent.rs  provider.rs  provides.rs  provision.rs  scoped.rs  subcomponent.rs  vec.rs
processor/src/protos/: manifest.rs  mod.rs
src/: attributes.rs  build_script.rs  builder_modules.md  component.md  component_builder.md  component_lifetime.rs  component_module_manifest.md  component_visible.md  define_component.md  define_subcomponent.md  entry_point.md  epilogue.md  injectable.md  lazy.rs  lib.rs  manifest_parser.rs  mod_epilogue.md  module.md  once.rs  parsing.rs  prologue.md  provider.rs  qualifier.md  singleton.md  subcomponent.md  type_data.rs
src/attributes/: injectables.rs
src/component_attributes/: mod.rs  qualified.md
src/doctests/: component.rs  component_module_manifest.rs  graph.rs  injectable.rs  mod.rs  (+3 more)
tests/: component_inner_mod.rs  component_inner_mod.rs-  component_module_auto_new.rs  component_module_builder_build.rs  component_module_manifest_inner_mod.rs  component_module_manifest_inner_mod.rs-  component_other_file.rs  component_provision.rs  component_provision_autobox.rs  component_provision_indirectly_scoped.rs  component_provision_lifetimed_scoped.rs  component_provision_other_file.rs  component_provision_scoped.rs  define_component.rs  entry_point.rs  extern_component.rs  injectable_default.rs  injectable_factory.rs  injectable_factory_implementing.rs  injectable_factory_visibility.rs  injectable_inject.rs  injectable_inject_autobox.rs  injectable_inject_component_lifetime.rs  injectable_inject_extern.rs  injectable_inject_qualified.rs  injectable_inject_scoped.rs  injectable_inner_mod_path.rs  injectable_inner_mod_path.rs-  injectable_inner_mod_path_outer_impl.rs  injectable_inner_mod_path_outer_impl.rs-  injectable_scoped.rs  injectable_scoped_container.rs  lazy.rs  lazy_scoped.rs  module_bind_indireclty_maybe_scoped_trait.rs  module_bind_indireclty_scoped_trait.rs  module_bind_indirectly_maybe_scoped_trait.rs  module_bind_indirectly_scoped_trait.rs  module_bind_scoped_trait.rs  module_bind_scoped_trait_container.rs  (+35 more)
userguide/: book.toml
(+155 files in other folders)
