# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "lockjaw"
version = "0.0.4"
authors = ["Ta-wei Yen"]
edition = "2018"
description = "Compile time dependency injection framework inspired by dagger"
license = "Apache-2.0"
repository = "https://github.com/azureblaze/lockjaw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lockjaw_processor = {path="processor", version = "0.0.4"}
regex = "1"

[build-dependencies]
rustc_version = "0.3"

[dev-dependencies]
trybuild = "1.0"
test_dep = {path="tests/test_dep"}