# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "common",
    "processor",
    "example",
    "example/printer",
    "example/printer/printer_impl",
    "example/printer/printer_test",
    "integration_tests/tests/test_dep",
    "integration_tests",
    "compile_tests",
    "compile_tests/duplicated_root_epilogue/dep",
    "compile_tests/duplicated_root_epilogue",
    "userguide/projects/setup",
    "userguide/projects/inject",
    "userguide/projects/request",
    "userguide/projects/builder",
    "userguide/projects/provide",
    "userguide/projects/binds",
    "userguide/projects/scoped",
]

[package]
name = "lockjaw"
version = "0.2.1"
authors = ["Ta-wei Yen"]
edition = "2021"
description = "Compile time dependency injection framework inspired by dagger"
license = "Apache-2.0"
repository = "https://github.com/azureblaze/lockjaw"
homepage = "https://azureblaze.github.io/lockjaw"
readme = "README.md"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lockjaw_processor = { path = "processor" }
lockjaw_common = { path = "common" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[build-dependencies]
rustc_version = "0.3"


