# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name = "lockjaw_common"
description = "lockjaw common lib"
license = "Apache-2.0"
version = "0.3.0"
authors = ["Ta-wei Yen"]
edition = "2021"
repository = "https://github.com/azureblaze/lockjaw"
documentation = "https://docs.rs/lockjaw/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(disabled)'] }


[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
lazy_static = "1.5.0"
serde_json = "1.0.134"