[workspace]
members = [
    "color_cycle",
    "cubit-win64",
]

[package]
name = "cubit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lockjaw = "*"

[build-dependencies]
lockjaw = "*"

[patch.crates-io]
lockjaw = { version = "0.2",path = "../"}
cubit = {path = "./"}
cubit-win64 = {path = "./cubit-win64"}
