# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name = "lockjaw_integration_tests"
description = "integration tests for lockjaw"
license = "Apache-2.0"
version = "0.2.1"
authors = ["Ta-wei Yen"]
edition = "2021"
repository = "https://github.com/azureblaze/lockjaw"
documentation = "https://docs.rs/lockjaw/"

[build-dependencies]
rustc_version = "0.4"
lockjaw = { path = "../" }

[dev-dependencies]
lockjaw = { path = "../" }
test_dep = { path = "tests/test_dep" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
