# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name = "lockjaw_processor"
description = "proc_macro processor for lockjaw"
license = "Apache-2.0"
version = "0.3.1"
authors = ["Ta-wei Yen"]
edition = "2021"
repository = "https://github.com/azureblaze/lockjaw"
documentation = "https://docs.rs/lockjaw/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
lazy_static = "1"
backtrace = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
lockjaw_common = "0.3.0"
[dependencies.syn]
version = "2.0"
features = ["full", "extra-traits"]

[build-dependencies]
rustc_version = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
