[package]
name = "cubit-win64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubit = "*"
lockjaw = "*"
backtrace = "*"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "windef",
    "std",
    "libloaderapi",
    "minwindef",
    "d3d12",
    "unknwnbase",
    "winerror",
    "winbase",
    "winnt",
    "d3dcommon",
    "dxgi1_6",
    "dxgi1_5",
    "dxgi1_4",
    "dxgi1_3",
    "dxgi1_2",
    "dxgi",
    "d3d12sdklayers",
    "dxgiformat",
    "dxgitype",
    "synchapi"
]

[build-dependencies]
lockjaw = "*"